# deploydocus2

./: Makefile  pyproject.toml
deploydocus2/: model_partials.py  models.py  pkg.py  types.py
